--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   "main": "./lib/log-color-optionaldate.js",
   "engines": {
     "node": ">= 0.8.21"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lambdacasserole/log-color-optionaldate.js.git"
+  },
 }
